--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </tr>
                     <tr>
                         <td>BLOOD GROUP</td>
-                        <td><select name="" id="" class="flow-control">
+                        <td><select name="" id="" class="form-control">
                             <option value="A-">A-</option>
                             <option value="B+">B+</option>
                             <option value="B-">B-</option>
